# mesh-segmentation-kmeans

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CSVUtils_8hpp_source.html  CentroidInitMethods_8hpp_source.html  CentroidPoint_8hpp_source.html  ConsistencyError_8hpp_source.html  Dockerfile  Doxyfile  Elbowmethod_8hpp_source.html  Entry_8hpp_source.html  EuclideanMetric_8hpp_source.html  Face_8hpp_source.html  GeodesicDijkstraMetric_8hpp_source.html  GeodesicHeatMetric_8hpp_source.html  GeodesicMetric_8hpp_source.html  HammingDistance_8hpp_source.html  HasWgtCent_8hpp_source.html  KDEBase_8hpp_source.html  KDECentroidMatrix_8hpp_source.html  KDECentroid_8hpp_source.html  KDEKInitMehod_8hpp_source.html  KDNode_8hpp_source.html  KDTree_8hpp_source.html  KMeans_8hpp_source.html  KernelFunction_8hpp_source.html  Makefile  MeshSegmentation_8hpp_source.html  Mesh_8hpp_source.html  Metric_8hpp_source.html  MostDistantCentroids_8hpp_source.html  Point_8hpp_source.html  README.md  README_Rendered.md  RandIndex_8hpp_source.html  RandomCentroids_8hpp_source.html  Segmentations_8hpp_source.html  SharedEnum_8hpp_source.html  Silhouette_8hpp_source.html  (+490 more)
.github/workflows/: ci.yml  doxygen.yml
config/: config.h.in
docs/doxygen/html/: _consistency_error_8hpp_source.html  _entry_8hpp_source.html  _euclidean_metric_8hpp_source.html  _face_8hpp_source.html  _geodesic_heat_metric_8hpp_source.html  _hamming_distance_8hpp_source.html  _has_wgt_cent_8hpp_source.html  _k_d_e_base_8hpp_source.html  _k_d_e_centroid_8hpp_source.html  _k_d_tree_8hpp_source.html  _k_means_8hpp_source.html  _mesh_8hpp_source.html  _mesh_segmentation_8hpp_source.html  _metric_8hpp_source.html  _most_distant_centroids_8hpp_source.html  _rand_index_8hpp_source.html  _random_centroids_8hpp_source.html  _segmentations_8hpp_source.html  _shared_enum_8hpp_source.html  _silhouette_8hpp_source.html  annotated.html  annotated_dup.js  class_centroid_init_method.js  class_elbow_method-members.html  class_elbow_method.html  class_elbow_method.js  class_enums-members.html  class_enums.html  class_geodesic_heat_metric-members.html  class_geodesic_heat_metric.html  class_geodesic_metric-members.html  class_has_wgt_cent-members.html  class_has_wgt_cent.html  class_k_d_e.js  class_k_d_e_base-members.html  class_k_d_e_base.html  class_k_d_e_method-members.html  class_k_means.html  class_k_means.js  class_kd_node.html  (+52 more)
include/: CSVUtils.hpp  CentroidPoint.hpp  HasWgtCent.hpp  KDNode.hpp  KDTree.hpp  KMeans.hpp  Mesh.hpp  MeshSegmentation.hpp  Point.hpp  metrics.hpp  typedefs.h
include/clustering/: CentroidInitMethods.hpp  KDE_Centroid.hpp  KDNode.hpp  KDTree.hpp  KMeans.hpp  MostDistantCentroids.hpp  RandomCentroids.hpp  kmeans.cu  kmeans_geodesic.cu
include/clustering/CentroidInitializationMethods/: CentroidInitMethods.hpp  Elbowmethod.hpp  KDEBase.hpp  KDECentroid.hpp  KDECentroidMatrix.hpp  KDEKInitMehod.hpp  KernelFunction.hpp  MostDistantCentroids.hpp  RandomCentroids.hpp  SharedEnum.hpp  Silhouette.hpp  kInitMethods.hpp
include/evaluation/: Entry.hpp  Segmentations.hpp
include/evaluation/methods/: ConsistencyError.hpp  HammingDistance.hpp  RandIndex.hpp
include/geometry/kdtree/: KDNode.hpp  KDTree.hpp
include/geometry/mesh/: Face.hpp  Mesh.hpp
include/geometry/metrics/: EuclideanMetric.hpp  GeodesicDijkstraMetric.hpp  GeodesicHeatMetric.hpp  GeodesicMetric.hpp  GeodeticMetric.hpp  Metric.hpp
include/geometry/point/: CentroidPoint.hpp  HasWgtCent.hpp  Point.hpp
include/k_means/: KDNode.hpp  KDTree.hpp  KMeans.hpp
include/mesh_segmentation/: MeshSegmentation.hpp
include/mesh_segmentation/evaluation/: ConsistencyError.hpp  HammingDistance.hpp  RandIndex.hpp  Segmentations.hpp
include/point/: CentroidPoint.hpp  Point.hpp
include/reader/: CSVUtils.hpp
include/segmentation/: Mesh.hpp  MeshSegmentation.hpp
include/utils/: CSVUtils.hpp
resources/: FileToPrintCloudOfPoint.ipynb  file_2d.csv
scalability/: CMakeCache.txt  CMakeLists.txt  Example.cpp  Makefile  TimerTest.cpp  cmake_install.cmake  my_benchmark  timertest
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_2.js  (+34 more)
src/: KDNode.cpp  KDTree.cpp  Mesh.cpp  benchmark.cpp  csv.cpp  evaluation.cpp  k_means.cpp  main.cpp  monitoring.cpp  plot.cpp  segmentation.cpp  viewer.cpp
src/clustering/: KDNode.cpp  KDTree.cpp  KMeans.cpp
src/clustering/CentroidInitializationMethods/: CentroidInitMethods.cpp  KDEBase.cpp  KDECentroid.cpp  KDECentroidMatrix.cpp  KernelFunction.cpp  MostDistantCentroids.cpp  RandomCentroids.cpp
src/geometry/kdtree/: KDNode.cpp  KDTree.cpp
src/geometry/mesh/: Mesh.cpp
src/geometry/metrics/: EuclideanMetric.cpp  EuclideanMetric.cu  GeodesicDijkstraMetric.cpp  GeodesicHeatMetric.cpp  GeodesicMetric.cpp  Metric.cpp  (+1 more)
src/model_renderer/: .gitignore  CMakeLists.txt  README.md  camera.cpp  camera.hpp  main.cpp  material.cpp  material.hpp  mesh.cpp  mesh.h  render.cpp  shader.cpp
src/model_renderer/include/: SharedEnum.hpp  camera.hpp  material.hpp  mesh.hpp  render.hpp  shader.hpp
src/model_renderer/shader/: phong.frag
src/model_renderer/src/: camera.cpp  camera.h  main.cpp  mesh.cpp  mesh.h  shader.cpp  shader.h
tests/: CMakeLists.txt
tests/clustering/: KMeansTest.cpp
tests/clustering/CentroidInitializationMethods/: CentroidInitMethodsTest.cpp  KDEBaseTest.cpp  KDECentroidMatrixTest.cpp  KDECentroidTest.cpp  KernelFunctionTest.cpp  MostDistantCentroidsTests.cpp  RandomCentroidsTest.cpp
tests/geometry/kdtree/: KDNodeTest.cpp  KDTreeTest.cpp
tests/geometry/mesh/: Mesh.cpp
tests/geometry/metrics/: EuclideanMetricTest.cpp  GeodesicHeatMetricTest.cpp  MetricTest.cpp
(+30 files in other folders)
